Fix extra spacing in action buttons and search entry (#99)

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,3 +19,12 @@
 .ci-history-menu-section {
   max-height: 450px;
 }
+
+.ci-history-search-section {
+  padding-top: 0;
+}
+
+.ci-history-search-section .popup-menu-ornament,
+.ci-history-actions-section .popup-menu-ornament {
+  width: auto;
+}
